--- a/ud82/package.json
+++ b/ud82/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "postcss-nesting": "^11.2.1",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.2.7",
     "vite": "^4.2.0"
   }
