--- a/ud82/package.json
+++ b/ud82/package.json
@@ -15,5 +15,8 @@
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.2.7",
     "vite": "^4.2.0"
+  },
+  "dependencies": {
+    "swiper": "^9.1.1"
   }
 }
